--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   --bg-0:#04060b; --bg-1:#05070d; --bg-2:#0b1220;
   --line:#18233a; --ink:#e6ecff; --muted:#95a7cf;
   --accent:#11b1ff; --accent2:#6ee7ff; --success:#24ff90;
-  /* Splash controls (JS updates) */
+  /* Splash anim controls (JS updates) */
   --logo-bright:0;  /* 0..1 */
   --logo-glow:0;    /* 0..1 */
 }
@@ -27,7 +27,7 @@ body{
   overflow-x:hidden;
 }
 
-/* Cosmic background + grain */
+/* Background + grain (no banding) */
 .bg-cosmos{
   position:fixed; inset:-15% -15% -15% -15%; z-index:-4; pointer-events:none;
   background:
@@ -48,10 +48,11 @@ body{
   opacity:.28; mix-blend-mode:overlay;
 }
 
-/* ===== OPENING VEIL (static rectangles) ===== */
+/* ===== OPENING VEIL (static rectangles visible immediately) ===== */
 .veil{
   position:fixed; inset:0; z-index:30; pointer-events:none;
   display:grid; grid-template-columns:repeat(22,1fr); grid-template-rows:repeat(12,1fr);
+  perspective:800px; /* for flip depth */
 }
 .tile{
   background:linear-gradient(180deg, rgba(18,26,44,.94), rgba(12,18,34,.90));
@@ -78,33 +79,44 @@ body{
 /* ===== SPLASH ===== */
 .splash{
   position:fixed; inset:0; z-index:9999; display:grid; place-items:center;
-  opacity:1; visibility:visible; transition:opacity .7s ease, visibility .7s ease;
+  opacity:1; visibility:visible; transition:opacity .55s ease, visibility .55s ease;
 }
 .splash.is-fading{opacity:0}
 .splash.is-hidden{opacity:0; visibility:hidden}
-.splash__stage{position:relative; display:grid; place-items:center; gap:16px}
+.splash__stage{position:relative; display:grid; place-items:center; gap:14px}
 .splash-vignette{
   position:absolute; width:min(88vw,820px); aspect-ratio:1/1; border-radius:50%;
   background:
-    radial-gradient(closest-side, rgba(8,150,220,.28), rgba(8,150,220,0) 70%),
+    radial-gradient(closest-side, rgba(8,150,220,.26), rgba(8,150,220,0) 70%),
     radial-gradient(closest-side, rgba(10,20,40,.35), rgba(10,20,40,0) 70%);
   filter:blur(18px); opacity:.9; z-index:-2;
 }
-/* Masked neon logo (no black box) */
+/* Masked neon logo (no black box) + skinny shape-following sweep */
+.logo-stack{position:relative; display:grid; place-items:center}
 .logo-mask{
-  width:min(46vw, 340px); height:min(46vw,340px); border-radius:24px;
-  background:
-    radial-gradient(90% 90% at 50% 50%, rgba(17,177,255, calc(.75*var(--logo-bright))), rgba(17,177,255,0) 70%),
-    linear-gradient(180deg, rgba(140,255,255, calc(1.15*var(--logo-bright))), rgba(0,120,220, calc(1*var(--logo-bright))));
+  width:min(46vw, 340px); height:min(46vw,340px);
   -webkit-mask:url("assets/logo.png") center/contain no-repeat;
           mask:url("assets/logo.png") center/contain no-repeat;
   mask-mode:luminance;
+  background:
+    radial-gradient(92% 92% at 50% 50%, rgba(17,177,255, calc(.78*var(--logo-bright))), rgba(17,177,255,0) 70%),
+    linear-gradient(180deg, rgba(160,255,255, calc(1.1*var(--logo-bright))), rgba(0,120,220, var(--logo-bright)));
   filter:
-    brightness(calc(.65 + .7*var(--logo-bright)))
-    contrast(calc(1 + .25*var(--logo-bright)))
-    saturate(calc(1 + .25*var(--logo-bright)))
-    drop-shadow(0 0 calc(55px*var(--logo-glow)) rgba(17,177,255,.75));
+    brightness(calc(.65 + .8*var(--logo-bright)))
+    contrast(calc(1 + .28*var(--logo-bright)))
+    saturate(calc(1 + .28*var(--logo-bright)))
+    drop-shadow(0 0 calc(62px*var(--logo-glow)) rgba(17,177,255,.85));
   animation:softPulse 3.2s ease-in-out infinite;
+}
+.sweep{
+  position:absolute; inset:0; pointer-events:none; opacity:.75;
+  background:conic-gradient(from 0deg, rgba(17,177,255,0), rgba(140,240,255,.95) 12%, rgba(17,177,255,0) 16% 100%);
+  -webkit-mask:url("assets/logo.png") center/contain no-repeat, radial-gradient(closest-side, transparent 0 88%, #000 89% 100%);
+          mask:url("assets/logo.png") center/contain no-repeat, radial-gradient(closest-side, transparent 0 88%, #000 89% 100%);
+  -webkit-mask-composite: source-in; /* Safari/WebKit narrow ring */
+          mask-composite: intersect;
+  filter:blur(.6px);
+  animation:spin 7.6s linear infinite;
 }
 @keyframes softPulse{
   0%   { transform:translateY(0) scale(1) }
@@ -113,8 +125,10 @@ body{
   54%  { transform:translateY(-0.5px) scale(1.01) }
   100% { transform:translateY(0) scale(1) }
 }
+@keyframes spin{to{transform:rotate(360deg)}}
 @media (max-width:900px){ .logo-mask{ width:210px; height:210px } }
 
+/* Bar + messages */
 .progress{
   width:min(76vw,560px); height:10px; border-radius:999px; overflow:hidden;
   background:linear-gradient(180deg, rgba(12,18,30,.6), rgba(10,16,26,.4));
@@ -131,53 +145,52 @@ body{
   font-family:'Orbitron',sans-serif; letter-spacing:1.8px; text-transform:uppercase;
   font-size:clamp(.8rem,.9rem,1rem); color:#a9cfff; text-align:center; margin-top:10px; opacity:.9;
 }
-.approved{display:none; margin-top:10px; display:flex; align-items:center; gap:10px;}
+.approved{ display:none; align-items:center; gap:10px; justify-content:center; margin-top:6px; }
 .approved .text{
   font-family:'Orbitron',sans-serif; letter-spacing:2px; text-transform:uppercase;
   color:var(--success); font-size:1rem; text-shadow:0 0 10px var(--success), 0 0 20px var(--success);
+  animation:pop .38s cubic-bezier(.2,1.6,.2,1) both;
 }
-.check{
-  width:22px; height:22px; border-radius:50%;
-  background: radial-gradient(circle, #00ff95 0 60%, rgba(0,0,0,0) 61%);
-  position:relative; box-shadow:0 0 12px rgba(36,255,144,.7);
-}
-.check::after{
-  content:""; position:absolute; left:6px; top:9px; width:8px; height:4px; border:2px solid #002b17;
-  border-top:none; border-right:none; transform:rotate(-45deg);
-}
+@keyframes pop{0%{transform:scale(.7);opacity:0}70%{transform:scale(1.08);opacity:1}100%{transform:scale(1)}}
+.check{ width:22px; height:22px; border-radius:50%; background: radial-gradient(circle, #00ff95 0 60%, rgba(0,0,0,0) 61%); position:relative; box-shadow:0 0 12px rgba(36,255,144,.7); animation:pop .38s .02s both cubic-bezier(.2,1.6,.2,1) }
+.check::after{ content:""; position:absolute; left:6px; top:9px; width:8px; height:4px; border:2px solid #002b17; border-top:none; border-right:none; transform:rotate(-45deg) }
 
 /* ===== PAGE FRAME ===== */
-.page{min-height:100svh; display:flex; flex-direction:column; opacity:0; visibility:hidden; transition:opacity .4s ease}
-.page-on .page{opacity:1; visibility:visible}
+.page{min-height:100svh; display:flex; flex-direction:column; opacity:0; transform:translateY(8px); visibility:hidden; transition:opacity .5s ease, transform .5s ease}
+.page-on .page{opacity:1; visibility:visible; transform:none}
 .wrap{max-width:1200px; width:100%; margin:0 auto; padding:26px 28px; flex:1}
 
-/* Header: centered with bigger logo, tight tagline */
+/* Header: logo left; title/tagline centered */
 header{
-  display:grid; grid-template-columns:auto 1fr; align-items:center; gap:18px;
+  display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:16px;
   padding:12px 0 22px; border-bottom:1px solid var(--line)
 }
+.header-left{display:flex;align-items:center}
 .logo{
-  width:112px; height:112px; border-radius:24px; overflow:hidden;
-  position:relative; background:radial-gradient(120% 120% at 30% 30%, rgba(8,180,255,.22), transparent 60%), #081018;
-  box-shadow:0 10px 24px rgba(17,177,255,.22);
+  width:112px; height:112px; border-radius:24px; overflow:hidden; position:relative;
 }
 .logo img{width:100%;height:100%;object-fit:cover;mix-blend-mode:screen;opacity:.98}
-.logo::after{
-  content:""; position:absolute; inset:-6px; border-radius:30px; pointer-events:none;
-  -webkit-mask: radial-gradient(closest-side, transparent 78%, #000 80% 100%);
-          mask: radial-gradient(closest-side, transparent 78%, #000 80% 100%);
-  background:conic-gradient(from 0deg, rgba(17,177,255,0), rgba(17,177,255,.6) 20%, rgba(17,177,255,0) 25%);
-  animation:spin 7.5s linear infinite; filter:blur(1px); opacity:.6;
+/* live skinny sweep that follows the logo shape */
+.logo .live-sweep{
+  position:absolute; inset:0; pointer-events:none; opacity:.65;
+  background:conic-gradient(from 0deg, rgba(17,177,255,0), rgba(140,240,255,.95) 10%, rgba(17,177,255,0) 14% 100%);
+  -webkit-mask:url("assets/logo.png") center/contain no-repeat, radial-gradient(closest-side, transparent 0 88%, #000 89% 100%);
+          mask:url("assets/logo.png") center/contain no-repeat, radial-gradient(closest-side, transparent 0 88%, #000 89% 100%);
+  -webkit-mask-composite: source-in;
+          mask-composite: intersect;
+  filter:blur(.6px);
+  animation:spin 9s linear infinite;
 }
-@keyframes spin{to{transform:rotate(360deg)}}
-.brand{display:flex;flex-direction:column;justify-content:center}
-.brand h1{
+.header-center{ text-align:center }
+.header-center h1{
   font-family:'Orbitron',sans-serif;font-weight:800;font-size:42px;line-height:1;letter-spacing:.8px;
   background:linear-gradient(90deg,var(--accent),#78d9ff);
   -webkit-background-clip:text;background-clip:text;color:transparent;
 }
-.brand p{color:#a9bce6;font-size:18px;margin-top:8px}
+.header-center p{color:#a9bce6;font-size:18px;margin-top:8px}
+.header-right{width:112px} /* spacer to keep the center truly centered */
 
+/* Main */
 main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:36px;padding:28px 0}
 .content{flex:1 1 560px}
 h2{
@@ -192,7 +205,7 @@ li{margin-bottom:8px}
 .apply-btn{display:inline-block;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:14px 34px;border-radius:12px;font-weight:800;letter-spacing:.6px;box-shadow:0 10px 26px rgba(17,177,255,.28);cursor:not-allowed;opacity:.78;font-family:'Orbitron',sans-serif}
 .note{font-size:12.5px;color:var(--muted);margin-top:8px}
 
-/* Terms card (mobile-optimized spacing) */
+/* Terms card (compact mobile) */
 .card{
   --gd:rgba(20,30,55,.86);
   position:relative; flex:1 1 420px;
@@ -214,7 +227,7 @@ li{margin-bottom:8px}
 @keyframes cardScan{0%{transform:translateY(0); opacity:0} 8%{opacity:.8} 40%{transform:translateY(calc(100% - 28px)); opacity:.8} 48%{opacity:0} 100%{opacity:0}}
 a:any-link{color:#a8dfff} a:visited{color:#a8dfff}
 
-/* Futuristic footer dock (tidy on mobile) */
+/* Footer dock */
 footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, rgba(6,10,20,.55), rgba(6,10,20,.35)); backdrop-filter:saturate(130%) blur(6px); border-top:1px solid rgba(150,190,255,.12) }
 .footer-row{ display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:space-between; max-width:1200px; margin:0 auto }
 .dock{ display:flex; gap:10px; flex-wrap:wrap }
@@ -226,15 +239,15 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
 /* Responsive */
 @media (max-width:960px){
   .wrap{padding:16px}
-  header{grid-template-columns:auto 1fr}
+  header{grid-template-columns:auto 1fr auto}
   .logo{width:90px;height:90px}
-  .brand h1{font-size:34px}
-  .brand p{font-size:16px}
+  .header-center h1{font-size:32px}
+  .header-center p{font-size:15.5px}
   h2{font-size:36px}
 }
 @media (max-width:520px){
-  .brand h1{font-size:30px}
-  .brand p{font-size:15px}
+  .header-center h1{font-size:28px}
+  .header-center p{font-size:15px}
   .row{grid-template-columns:130px 1fr}
   .value{font-size:1rem}
 }
@@ -245,14 +258,17 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   <div class="bg-cosmos"></div>
   <div class="bg-grain"></div>
 
-  <!-- Opening veil (shown immediately) -->
+  <!-- Opening veil (rectangles) -->
   <div class="veil shimmer" id="veil" aria-hidden="true"></div>
 
   <!-- Splash -->
   <div class="splash" id="splash" aria-hidden="true">
     <div class="splash__stage">
       <div class="splash-vignette" aria-hidden="true"></div>
-      <div class="logo-mask" role="img" aria-label="F1 Cash logo"></div>
+      <div class="logo-stack">
+        <div class="logo-mask" aria-label="F1 Cash logo"></div>
+        <div class="sweep" aria-hidden="true"></div>
+      </div>
       <div class="progress" aria-label="Loading"><div class="progress__bar" id="bar"></div></div>
       <div class="progress__label" id="label">AUTHORIZING…</div>
       <div class="approved" id="approved">
@@ -266,11 +282,17 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   <div class="page">
     <div class="wrap">
       <header>
-        <div class="logo"><img src="assets/logo.png" alt="F1 Cash Logo"></div>
-        <div class="brand">
+        <div class="header-left">
+          <div class="logo">
+            <img src="assets/logo.png" alt="F1 Cash Logo">
+            <div class="live-sweep" aria-hidden="true"></div>
+          </div>
+        </div>
+        <div class="header-center">
           <h1>F1 CASH</h1>
           <p>Simple Business Funding</p>
         </div>
+        <div class="header-right"><!-- spacer --></div>
       </header>
 
       <main>
@@ -338,17 +360,16 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   var bar = document.getElementById('bar');
   var veil = document.getElementById('veil');
 
-  // Build veil tiles immediately (no spawn)
+  // Build veil tiles immediately (no spawning), with stagger ready for flip
   (function buildVeil(){
-    var cols = 22, rows = 12, frag = document.createDocumentFragment(), idx=0;
+    var cols = 22, rows = 12, frag = document.createDocumentFragment();
     for (var r=0;r<rows;r++){
       for (var c=0;c<cols;c++){
         var t = document.createElement('div'); t.className='tile';
-        // store a stagger for flip-out
         var dist = Math.hypot(c-cols/2, r-rows/2);
         var delay = Math.round(dist*18 + (Math.random()*40));
         t.style.setProperty('--d', delay+'ms');
-        frag.appendChild(t); idx++;
+        frag.appendChild(t);
       }
     }
     veil.appendChild(frag);
@@ -356,7 +377,7 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
 
   function flipOutVeil(){
     veil.querySelectorAll('.tile').forEach(function(t){ t.classList.add('flip'); });
-    setTimeout(function(){ veil.remove(); }, 950); // wait for cascade
+    setTimeout(function(){ veil.remove(); }, 950);
   }
 
   function revealPage(){
@@ -368,37 +389,39 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   }
 
   function approveSequence(){
-    // show approved, finish bar to 100, micro-flash logo
-    label.style.display='none';
+    // Show "ACCESS APPROVED" below AUTHORIZING, then run to 100%
     approved.style.display='flex';
-    bar.style.transition = 'width .4s ease';
-    bar.style.width = '100%';
+    bar.style.transition='width .35s ease';
+    bar.style.width='100%';
+    // micro-flash on logo
     root.style.setProperty('--logo-bright','1');
     root.style.setProperty('--logo-glow','1');
-    // flip veil tiles out, then reveal
+    // flip veil and reveal page a moment later
     flipOutVeil();
     setTimeout(revealPage, 520);
   }
 
-  // Drive progress to 85%, then approve
+  // Drive progress to 50% → show approved → fill to 100
   (function run(){
-    var start = performance.now(), DURATION = 1900, APPROVE_AT = 0.85;
+    var start = performance.now(), DURATION = 1800, APPROVE_AT = 0.50;
     function tick(now){
       var t = Math.min(1, (now - start) / DURATION);
-      // progress bar value to 85%
       var shown = Math.min(t, APPROVE_AT);
       bar.style.width = (shown*100).toFixed(1) + '%';
-      // brighter earlier, with stronger ramp
-      var glow = Math.pow(t, 0.7);
+      // brighter earlier, stronger ramp
+      var glow = Math.pow(t, 0.6);
       root.style.setProperty('--logo-bright', glow.toFixed(3));
       root.style.setProperty('--logo-glow',   glow.toFixed(3));
       if (t < APPROVE_AT){ requestAnimationFrame(tick); }
-      else { approveSequence(); }
+      else {
+        // pop approved under AUTHORIZING (keep label visible above)
+        approveSequence();
+      }
     }
     requestAnimationFrame(tick);
   })();
 
-  // Tap to skip quickly to approval
+  // Tap to skip
   document.addEventListener('pointerdown', function once(){
     approveSequence();
     document.removeEventListener('pointerdown', once);
