--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   --bg-0:#04060b; --bg-1:#05070d; --bg-2:#0b1220;
   --line:#18233a; --ink:#e6ecff; --muted:#95a7cf;
   --accent:#11b1ff; --accent2:#6ee7ff; --success:#24ff90;
-  /* Splash anim controls (JS updates) */
-  --logo-bright:0;  /* 0..1 */
-  --logo-glow:0;    /* 0..1 */
+
+  /* Live-tuned during splash */
+  --logo-bright:0;   /* 0..1 */
+  --logo-glow:0;     /* 0..1 */
 }
 *{box-sizing:border-box;margin:0;padding:0}
 html,body{height:100%}
@@ -27,7 +28,7 @@ body{
   overflow-x:hidden;
 }
 
-/* Background + grain (no banding) */
+/* Background + faint grain to avoid banding */
 .bg-cosmos{
   position:fixed; inset:-15% -15% -15% -15%; z-index:-4; pointer-events:none;
   background:
@@ -45,14 +46,14 @@ body{
     radial-gradient(1px 1px at 72% 32%, rgba(255,255,255,.032) 0, transparent 55%),
     radial-gradient(1px 1px at 88% 64%, rgba(255,255,255,.028) 0, transparent 55%),
     radial-gradient(1px 1px at 52% 52%, rgba(0,0,0,.035) 0, transparent 55%);
-  opacity:.28; mix-blend-mode:overlay;
+  opacity:.22; mix-blend-mode:overlay;
 }
 
-/* ===== OPENING VEIL (static rectangles visible immediately) ===== */
+/* ===== VEIL: rectangles are visible immediately (no spawning) ===== */
 .veil{
   position:fixed; inset:0; z-index:30; pointer-events:none;
   display:grid; grid-template-columns:repeat(22,1fr); grid-template-rows:repeat(12,1fr);
-  perspective:800px; /* for flip depth */
+  perspective:900px;
 }
 .tile{
   background:linear-gradient(180deg, rgba(18,26,44,.94), rgba(12,18,34,.90));
@@ -67,31 +68,25 @@ body{
 }
 @keyframes sh{to{transform:translateX(120%) rotate(12deg)}}
 
-/* Flip cascade when approved */
+/* Flip-cascade for removal */
 .tile.flip{
-  transform-origin:50% 50% -4px;
-  transform:rotateY(88deg) translateZ(40px) scale(.9);
+  transform-origin:50% 50% -5px;
+  transform:rotateY(88deg) translateZ(40px) scale(.92);
   opacity:0;
-  transition:transform .6s cubic-bezier(.2,.8,.2,1), opacity .45s ease;
+  transition:transform .7s cubic-bezier(.2,.8,.2,1), opacity .55s ease;
   transition-delay:var(--d,0ms);
 }
 
 /* ===== SPLASH ===== */
 .splash{
   position:fixed; inset:0; z-index:9999; display:grid; place-items:center;
-  opacity:1; visibility:visible; transition:opacity .55s ease, visibility .55s ease;
+  opacity:1; visibility:visible; transition:opacity .6s ease, visibility .6s ease;
 }
 .splash.is-fading{opacity:0}
 .splash.is-hidden{opacity:0; visibility:hidden}
 .splash__stage{position:relative; display:grid; place-items:center; gap:14px}
-.splash-vignette{
-  position:absolute; width:min(88vw,820px); aspect-ratio:1/1; border-radius:50%;
-  background:
-    radial-gradient(closest-side, rgba(8,150,220,.26), rgba(8,150,220,0) 70%),
-    radial-gradient(closest-side, rgba(10,20,40,.35), rgba(10,20,40,0) 70%);
-  filter:blur(18px); opacity:.9; z-index:-2;
-}
-/* Masked neon logo (no black box) + skinny shape-following sweep */
+
+/* LOGO: only the logo shape, plus a thin outline that follows the shape */
 .logo-stack{position:relative; display:grid; place-items:center}
 .logo-mask{
   width:min(46vw, 340px); height:min(46vw,340px);
@@ -99,36 +94,34 @@ body{
           mask:url("assets/logo.png") center/contain no-repeat;
   mask-mode:luminance;
   background:
-    radial-gradient(92% 92% at 50% 50%, rgba(17,177,255, calc(.78*var(--logo-bright))), rgba(17,177,255,0) 70%),
-    linear-gradient(180deg, rgba(160,255,255, calc(1.1*var(--logo-bright))), rgba(0,120,220, var(--logo-bright)));
+    radial-gradient(94% 94% at 50% 50%, rgba(17,177,255, calc(.78*var(--logo-bright))), rgba(17,177,255,0) 70%),
+    linear-gradient(180deg, rgba(170,255,255, calc(1.1*var(--logo-bright))), rgba(0,120,220, var(--logo-bright)));
   filter:
-    brightness(calc(.65 + .8*var(--logo-bright)))
+    brightness(calc(.66 + .85*var(--logo-bright)))
     contrast(calc(1 + .28*var(--logo-bright)))
     saturate(calc(1 + .28*var(--logo-bright)))
-    drop-shadow(0 0 calc(62px*var(--logo-glow)) rgba(17,177,255,.85));
-  animation:softPulse 3.2s ease-in-out infinite;
+    drop-shadow(0 0 calc(58px*var(--logo-glow)) rgba(17,177,255,.85));
+  animation:softPulse 3.6s ease-in-out infinite;
 }
-.sweep{
-  position:absolute; inset:0; pointer-events:none; opacity:.75;
-  background:conic-gradient(from 0deg, rgba(17,177,255,0), rgba(140,240,255,.95) 12%, rgba(17,177,255,0) 16% 100%);
-  -webkit-mask:url("assets/logo.png") center/contain no-repeat, radial-gradient(closest-side, transparent 0 88%, #000 89% 100%);
-          mask:url("assets/logo.png") center/contain no-repeat, radial-gradient(closest-side, transparent 0 88%, #000 89% 100%);
-  -webkit-mask-composite: source-in; /* Safari/WebKit narrow ring */
-          mask-composite: intersect;
-  filter:blur(.6px);
-  animation:spin 7.6s linear infinite;
+.outline{
+  position:absolute; inset:0; pointer-events:none; opacity:.7;
+  /* ultra-thin conic sweep, masked ONLY by the logo shape */
+  background:conic-gradient(from 0deg, rgba(17,177,255,0), rgba(140,240,255,.95) 8%, rgba(17,177,255,0) 11% 100%);
+  -webkit-mask:url("assets/logo.png") center/contain no-repeat;
+          mask:url("assets/logo.png") center/contain no-repeat;
+  filter:blur(.45px);
+  animation:spin 8.5s linear infinite;
 }
 @keyframes softPulse{
   0%   { transform:translateY(0) scale(1) }
-  18%  { transform:translateY(-0.5px) scale(1.012) }
-  36%  { transform:translateY(0) scale(1) }
-  54%  { transform:translateY(-0.5px) scale(1.01) }
+  20%  { transform:translateY(-0.6px) scale(1.012) }
+  40%  { transform:translateY(0) scale(1) }
+  60%  { transform:translateY(-0.4px) scale(1.008) }
   100% { transform:translateY(0) scale(1) }
 }
 @keyframes spin{to{transform:rotate(360deg)}}
 @media (max-width:900px){ .logo-mask{ width:210px; height:210px } }
 
-/* Bar + messages */
 .progress{
   width:min(76vw,560px); height:10px; border-radius:999px; overflow:hidden;
   background:linear-gradient(180deg, rgba(12,18,30,.6), rgba(10,16,26,.4));
@@ -143,44 +136,33 @@ body{
 }
 .progress__label{
   font-family:'Orbitron',sans-serif; letter-spacing:1.8px; text-transform:uppercase;
-  font-size:clamp(.8rem,.9rem,1rem); color:#a9cfff; text-align:center; margin-top:10px; opacity:.9;
+  font-size:clamp(.8rem,.9rem,1rem); color:#a9cfff; text-align:center; margin-top:10px; opacity:.95;
 }
 .approved{ display:none; align-items:center; gap:10px; justify-content:center; margin-top:6px; }
 .approved .text{
   font-family:'Orbitron',sans-serif; letter-spacing:2px; text-transform:uppercase;
   color:var(--success); font-size:1rem; text-shadow:0 0 10px var(--success), 0 0 20px var(--success);
-  animation:pop .38s cubic-bezier(.2,1.6,.2,1) both;
+  animation:pop .42s cubic-bezier(.2,1.6,.2,1) both;
 }
-@keyframes pop{0%{transform:scale(.7);opacity:0}70%{transform:scale(1.08);opacity:1}100%{transform:scale(1)}}
-.check{ width:22px; height:22px; border-radius:50%; background: radial-gradient(circle, #00ff95 0 60%, rgba(0,0,0,0) 61%); position:relative; box-shadow:0 0 12px rgba(36,255,144,.7); animation:pop .38s .02s both cubic-bezier(.2,1.6,.2,1) }
+@keyframes pop{0%{transform:scale(.7);opacity:0}70%{transform:scale(1.09);opacity:1}100%{transform:scale(1)}}
+.check{ width:22px; height:22px; border-radius:50%; background: radial-gradient(circle, #00ff95 0 60%, rgba(0,0,0,0) 61%); position:relative; box-shadow:0 0 12px rgba(36,255,144,.7); animation:pop .42s .02s both cubic-bezier(.2,1.6,.2,1) }
 .check::after{ content:""; position:absolute; left:6px; top:9px; width:8px; height:4px; border:2px solid #002b17; border-top:none; border-right:none; transform:rotate(-45deg) }
 
 /* ===== PAGE FRAME ===== */
-.page{min-height:100svh; display:flex; flex-direction:column; opacity:0; transform:translateY(8px); visibility:hidden; transition:opacity .5s ease, transform .5s ease}
+.page{min-height:100svh; display:flex; flex-direction:column; opacity:0; transform:translateY(8px); visibility:hidden; transition:opacity .6s ease, transform .6s ease}
 .page-on .page{opacity:1; visibility:visible; transform:none}
 .wrap{max-width:1200px; width:100%; margin:0 auto; padding:26px 28px; flex:1}
 
-/* Header: logo left; title/tagline centered */
+/* Header: logo left, title/tagline centered */
 header{
   display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:16px;
   padding:12px 0 22px; border-bottom:1px solid var(--line)
 }
 .header-left{display:flex;align-items:center}
 .logo{
-  width:112px; height:112px; border-radius:24px; overflow:hidden; position:relative;
+  width:112px; height:112px; position:relative;
 }
 .logo img{width:100%;height:100%;object-fit:cover;mix-blend-mode:screen;opacity:.98}
-/* live skinny sweep that follows the logo shape */
-.logo .live-sweep{
-  position:absolute; inset:0; pointer-events:none; opacity:.65;
-  background:conic-gradient(from 0deg, rgba(17,177,255,0), rgba(140,240,255,.95) 10%, rgba(17,177,255,0) 14% 100%);
-  -webkit-mask:url("assets/logo.png") center/contain no-repeat, radial-gradient(closest-side, transparent 0 88%, #000 89% 100%);
-          mask:url("assets/logo.png") center/contain no-repeat, radial-gradient(closest-side, transparent 0 88%, #000 89% 100%);
-  -webkit-mask-composite: source-in;
-          mask-composite: intersect;
-  filter:blur(.6px);
-  animation:spin 9s linear infinite;
-}
 .header-center{ text-align:center }
 .header-center h1{
   font-family:'Orbitron',sans-serif;font-weight:800;font-size:42px;line-height:1;letter-spacing:.8px;
@@ -188,7 +170,7 @@ header{
   -webkit-background-clip:text;background-clip:text;color:transparent;
 }
 .header-center p{color:#a9bce6;font-size:18px;margin-top:8px}
-.header-right{width:112px} /* spacer to keep the center truly centered */
+.header-right{width:112px} /* spacer for true centering */
 
 /* Main */
 main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:36px;padding:28px 0}
@@ -258,16 +240,15 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   <div class="bg-cosmos"></div>
   <div class="bg-grain"></div>
 
-  <!-- Opening veil (rectangles) -->
+  <!-- Rectangles (visible immediately) -->
   <div class="veil shimmer" id="veil" aria-hidden="true"></div>
 
   <!-- Splash -->
   <div class="splash" id="splash" aria-hidden="true">
     <div class="splash__stage">
-      <div class="splash-vignette" aria-hidden="true"></div>
       <div class="logo-stack">
         <div class="logo-mask" aria-label="F1 Cash logo"></div>
-        <div class="sweep" aria-hidden="true"></div>
+        <div class="outline" aria-hidden="true"></div>
       </div>
       <div class="progress" aria-label="Loading"><div class="progress__bar" id="bar"></div></div>
       <div class="progress__label" id="label">AUTHORIZING…</div>
@@ -285,14 +266,13 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
         <div class="header-left">
           <div class="logo">
             <img src="assets/logo.png" alt="F1 Cash Logo">
-            <div class="live-sweep" aria-hidden="true"></div>
           </div>
         </div>
         <div class="header-center">
           <h1>F1 CASH</h1>
           <p>Simple Business Funding</p>
         </div>
-        <div class="header-right"><!-- spacer --></div>
+        <div class="header-right"></div>
       </header>
 
       <main>
@@ -360,14 +340,15 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   var bar = document.getElementById('bar');
   var veil = document.getElementById('veil');
 
-  // Build veil tiles immediately (no spawning), with stagger ready for flip
+  // Build veil tiles immediately with precomputed delays for the flip cascade
   (function buildVeil(){
     var cols = 22, rows = 12, frag = document.createDocumentFragment();
     for (var r=0;r<rows;r++){
       for (var c=0;c<cols;c++){
         var t = document.createElement('div'); t.className='tile';
+        // stagger by distance from center
         var dist = Math.hypot(c-cols/2, r-rows/2);
-        var delay = Math.round(dist*18 + (Math.random()*40));
+        var delay = Math.round(dist*22 + (Math.random()*50));
         t.style.setProperty('--d', delay+'ms');
         frag.appendChild(t);
       }
@@ -377,7 +358,7 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
 
   function flipOutVeil(){
     veil.querySelectorAll('.tile').forEach(function(t){ t.classList.add('flip'); });
-    setTimeout(function(){ veil.remove(); }, 950);
+    setTimeout(function(){ veil.remove(); }, 1100);
   }
 
   function revealPage(){
@@ -389,39 +370,39 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   }
 
   function approveSequence(){
-    // Show "ACCESS APPROVED" below AUTHORIZING, then run to 100%
+    // show approved under the AUTHORIZING label, then complete to 100%
     approved.style.display='flex';
-    bar.style.transition='width .35s ease';
+    // complete the bar smoothly
+    bar.style.transition='width 1s ease';
     bar.style.width='100%';
-    // micro-flash on logo
+    // brighten logo a touch more
     root.style.setProperty('--logo-bright','1');
     root.style.setProperty('--logo-glow','1');
-    // flip veil and reveal page a moment later
+    // flip rectangles and reveal
     flipOutVeil();
-    setTimeout(revealPage, 520);
+    setTimeout(revealPage, 700);
   }
 
-  // Drive progress to 50% → show approved → fill to 100
+  // Smooth progress to 85% (steady pace), then approve
   (function run(){
-    var start = performance.now(), DURATION = 1800, APPROVE_AT = 0.50;
+    var start = performance.now(),
+        DURATION = 3200,       // slower, steady
+        APPROVE_AT = 0.85;     // approve at 85%
     function tick(now){
       var t = Math.min(1, (now - start) / DURATION);
       var shown = Math.min(t, APPROVE_AT);
       bar.style.width = (shown*100).toFixed(1) + '%';
-      // brighter earlier, stronger ramp
-      var glow = Math.pow(t, 0.6);
+      // glow ramp—brighter earlier but still smooth
+      var glow = Math.pow(t, 0.75);
       root.style.setProperty('--logo-bright', glow.toFixed(3));
       root.style.setProperty('--logo-glow',   glow.toFixed(3));
       if (t < APPROVE_AT){ requestAnimationFrame(tick); }
-      else {
-        // pop approved under AUTHORIZING (keep label visible above)
-        approveSequence();
-      }
+      else { approveSequence(); }
     }
     requestAnimationFrame(tick);
   })();
 
-  // Tap to skip
+  // Optional skip: tap to approve immediately (kept smooth)
   document.addEventListener('pointerdown', function once(){
     approveSequence();
     document.removeEventListener('pointerdown', once);
@@ -430,7 +411,7 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   // Failsafe
   setTimeout(function(){
     if (!document.body.classList.contains('page-on')) approveSequence();
-  }, 5000);
+  }, 6000);
 })();
 </script>
 </body>
