--- a/index.html
+++ b/index.html
@@ -55,18 +55,29 @@ body::after{ /* subtle grain to prevent banding */
 .splash.is-hide{opacity:0; visibility:hidden}
 .stage{display:grid; place-items:center; gap:16px}
 
-/* Always-visible image, no mask, no rectangle; screen blend kills dark halos */
-.slogo-wrap{position:relative; display:inline-grid; place-items:center; background:transparent}
-.slogo{
-  width:min(54vw,380px); height:auto;
+/* Clean, masked logo: black pixels removed using luminance mask; rounded corners preserved */
+.slogo{ /* base animation variables reused */
   transform:scale(var(--logo-scale));
-  background-color:transparent; mix-blend-mode:screen;
+  animation:pulse 3.6s ease-in-out infinite;
   filter:
     brightness(calc(.70 + .90*var(--logo-bright)))
     contrast(calc(1 + .30*var(--logo-bright)))
     saturate(calc(1 + .30*var(--logo-bright)))
     drop-shadow(0 0 calc(60px*var(--logo-glow)) rgba(17,177,255,.9));
-  animation:pulse 3.6s ease-in-out infinite;
+}
+.slogo-mask{
+  width:min(54vw,380px); height:min(54vw,380px);
+  border-radius:28px; /* rounded edges for the tile */
+  background:
+    radial-gradient(96% 96% at 50% 50%, rgba(17,177,255, calc(.85*var(--logo-bright))), rgba(17,177,255,0) 70%),
+    linear-gradient(180deg, #c4ffff, #0192e6);
+  /* Use the PNG as a luminance mask so the black background vanishes */
+  -webkit-mask: url("assets/logo.png") center/contain no-repeat;
+          mask: url("assets/logo.png") center/contain no-repeat;
+  -webkit-mask-mode: luminance; mask-mode: luminance;
+  -webkit-mask-composite: source-over;
+          mask-composite: add;
+  background-clip: border-box;
 }
 @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.015)}}
 
@@ -94,22 +105,28 @@ body::after{ /* subtle grain to prevent banding */
   background: radial-gradient(circle, #00ff95 0 60%, rgba(0,0,0,0) 61%);
   position:relative; box-shadow:0 0 12px rgba(36,255,144,.7); animation:pop .42s .02s both cubic-bezier(.2,1.6,.2,1) }
 .check::after{ content:""; position:absolute; left:6px; top:9px; width:8px; height:4px; border:2px solid #002b17; border-top:none; border-right:none; transform:rotate(-45deg) }
-@keyframes pop{0%{transform:scale(.7);opacity:0}70%{transform:scale(1.09);opacity:1}100%{transform:scale(1)}}
+@keyframes pop{0%{transform:scale(.7);opacity:0}70%{transform:scale(1.09);opacity:1}100%{transform:scale(1)}
 
 /* ================= PAGE ================= */
 .page{min-height:100svh; display:flex; flex-direction:column; opacity:0; transform:translateY(8px); visibility:hidden; transition:opacity .6s ease, transform .6s ease}
 .page-on .page{opacity:1; visibility:visible; transform:none}
 .wrap{max-width:1200px; width:100%; margin:0 auto; padding:26px 28px; flex:1}
 
-/* Header: logo left (no box), title centered */
+/* Header: logo left (masked), title centered */
 header{
   display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:16px;
   padding:12px 0 22px; border-bottom:1px solid var(--line)
 }
 .header-left{display:flex;align-items:center}
-.brand-logo{position:relative; width:112px; height:112px; display:grid; place-items:center; background:transparent}
-.brand-logo img{
-  width:100%; height:auto; display:block; background:transparent; mix-blend-mode:screen;
+.brand-logo{position:relative; width:112px; height:112px; display:grid; place-items:center}
+.brand-logo-mask{
+  width:100%; height:100%; border-radius:24px;
+  background:
+    radial-gradient(96% 96% at 50% 50%, rgba(17,177,255,.95), rgba(17,177,255,0) 70%),
+    linear-gradient(180deg, #b7fbff, #0a86de);
+  -webkit-mask: url("assets/logo.png") center/contain no-repeat;
+          mask: url("assets/logo.png") center/contain no-repeat;
+  -webkit-mask-mode: luminance; mask-mode: luminance;
   filter:drop-shadow(0 0 28px rgba(17,177,255,.55)) drop-shadow(0 0 8px rgba(17,177,255,.35));
 }
 .header-center{text-align:center}
@@ -185,9 +202,9 @@ footer{
   <!-- ===== Splash ===== -->
   <div class="splash" id="splash" aria-hidden="true">
     <div class="stage">
-      <div class="slogo-wrap">
-        <img class="slogo" id="slogo" src="assets/logo.png" alt="F1 Cash logo">
-      </div>
+      <!-- Masked logo: no black rectangle, rounded edges -->
+      <div class="slogo slogo-mask" aria-label="F1 Cash logo"></div>
+
       <div class="progress" aria-label="Loading">
         <div class="bar" id="bar"></div>
       </div>
@@ -204,7 +221,8 @@ footer{
     <div class="wrap">
       <header>
         <div class="header-left">
-          <div class="brand-logo"><img src="assets/logo.png" alt="F1 Cash"></div>
+          <!-- Masked header logo -->
+          <div class="brand-logo"><div class="brand-logo-mask" aria-label="F1 Cash"></div></div>
         </div>
         <div class="header-center">
           <h1>F1 CASH</h1>
@@ -274,9 +292,7 @@ footer{
   const approved = document.getElementById('approved');
 
   function fadeOutSplash(){
-    // prevent any bar width transition from causing a flash during fade
     bar.style.transition='none';
-    // force a frame before adding fade class (prevents flicker)
     requestAnimationFrame(()=> {
       splash.classList.add('is-fade');
       splash.addEventListener('transitionend', function onEnd(e){
@@ -287,12 +303,9 @@ footer{
       });
     });
   }
-  function revealPage(){
-    document.body.classList.add('page-on');
-  }
+  function revealPage(){ document.body.classList.add('page-on'); }
   function approveSequence(){
     approved.style.display='flex';
-    // complete bar and brighten logo + tiny scale pop
     bar.style.transition='width 1.1s ease';
     bar.style.width='100%';
     root.style.setProperty('--logo-bright','1');
